--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <antlr4-maven-plugin.version>4.2</antlr4-maven-plugin.version>
 
     <antlr4.version>4.2</antlr4.version>
+    <guava.version>16.0.1</guava.version>
   </properties>
 
   <dependencies>
@@ -23,6 +24,13 @@
       <groupId>org.antlr</groupId>
       <artifactId>antlr4</artifactId>
       <version>${antlr4.version}</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>${guava.version}</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
