--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
     <antlr4.version>4.2</antlr4.version>
     <guava.version>16.0.1</guava.version>
+    <diffutils.version>1.3.0</diffutils.version>
     <junit.version>4.11</junit.version>
   </properties>
 
@@ -33,6 +34,13 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>${guava.version}</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.googlecode.java-diff-utils</groupId>
+      <artifactId>diffutils</artifactId>
+      <version>${diffutils.version}</version>
       <scope>compile</scope>
     </dependency>
 
@@ -74,7 +82,7 @@
           </execution>
         </executions>
         <configuration>
-          <packageName>robotoer</packageName>
+          <packageName>robotoer.ast.maven</packageName>
         </configuration>
       </plugin>
 
@@ -83,8 +91,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
 
